feat: disable keep-alive on connections